name:                fortran-generator
version:             0.1.0.0
synopsis:            Generate example Fortran programs of particular shapes to generate data on CamFort.
description:         Built on the CamFort framework
homepage:            https://github.com/camfort/fortran-generator
license:             Apache-2.0
author:              Dominic Orchard
maintainer:          d.a.orchard@kent.ac.uk
copyright:           2018 University of Kent
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/camfort/fortran-generator

executable eval
  main-is:             Evaluate.hs
  other-modules:       Big.Big, StdError
  build-depends:       base,
                       camfort >= 0.905,
                       fortran-src >= 0.2.0.0,
                       containers >= 0.5.7.1,
                       uniplate >= 1.6.12,
                       mtl >= 2.2.1,
                       fgl >= 5.5.3,
                       directory >= 1.3,
                       strict >= 0.3.2,
                       deepseq >= 1.4,
                       process >= 1.4.3.0,
                       bytestring >= 0.10,
                       pretty >= 1.1.3.6,
                       clock
  hs-source-dirs:      .
  ghc-options:	       -O2
  default-language:    Haskell2010
